<resources>
    <string name="app_name">Nyenyak</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pengecekan_terakhir">Pengecekan Terakhir</string>
    <string name="tips_tidur">Tips Tidur</string>
    <string name="dashboard">Dashboard</string>
    <string name="kondisi_tidur">Kondisi Tidur</string>
    <string name="kurang_tidur">Kurang Tidur</string>
    <string name="tanggal">12/12/2012</string>
    <string name="tips_uji">beliau bukan sembarang beliau</string>
    <string name="list_pengecekan">Riwayat Diagnosis</string>
    <string name="gender">Gender</string>
    <string name="umur">Umur</string>
    <string name="tahun">Tahun</string>
    <string name="tinggi">Tinggi</string>
    <string name="cm">Cm</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="kg">Kg</string>
    <string name="durasi_tidur">Durasi Tidur</string>
    <string name="jam_hari">Jam/Hari</string>
    <string name="rating_tidur">Rating Tidur</string>
    <string name="rating_stres">Rating Stres</string>
    <string name="tekanan_darah">Tekanan Darah</string>
    <string name="detak_jantung">Detak Jantung</string>
    <string name="bpm">Bpm</string>
    <string name="langkah_per_hari">langkah/Hari</string>
    <string name="input">Input</string>
    <string name="hasil_diagnosa">Hasil\nDiagnosa\n</string>
    <string name="tanggal_tes">12-12-1212</string>
    <string name="penyakit_tidur">Penyakit Tidur</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="solusi">Solusi</string>
    <string name="lanjut">Lanjut</string>
    <string name="list">Riwayat</string>
    <string name="welcome_text">Selamat Datang di Nyenyak!</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="or">Atau</string>
    <string name="name_title">Nama Lengkap</string>
    <string name="email_title">Email</string>
    <string name="password_title">Password</string>
    <string name="gender_title">Jenis Kelamin</string>
    <string name="gender_hint">Male or Female</string>
    <string name="birthdate_title">Tanggal Lahir</string>
    <string name="sign_up_title">Daftar Sekarang</string>
    <string name="sign_in_title">Masuk Sekarang</string>
    <string name="sub_title_register">Buat akun untuk ketahui\nkualitas dan penyakit tidur anda</string>
    <string name="sub_title_login">Selamat datang kembali !\nMasuk untuk lihat kualitas dan penyakit tidur</string>
    <string name="detail_ndiagnosa">Detail\nDiagnosa</string>
    <string name="indeks_masa_tubuh">Indeks Masa Tubuh</string>
    <string name="level_aktivitas_fisik">Level Aktivitas Fisik</string>
    <string name="settings">Settings</string>
    <string name="rating_aktivitas_fisik">Durasi Aktivitas Fisik</string>
    <string name="due_date">Due Date</string>
    <string name="informasi_user">Informasi User</string>
    <string name="update_ninformasi_user">Update\\n Informasi User</string>
    <string name="update_informasi_user">Update \nInformasi User</string>
    <string name="user">User</string>
    <string name="logout">Logout</string>
    <string name="tinggi_info">Tinggi badan seseorang</string>
    <string name="berat_info">Berat badan seseorang</string>
    <string name="durasi_info">Jumlah jam tidur seseorang per hari</string>
    <string name="rating_tidur_info">Penilaian subjektif terhadap kualitas tidur, berkisar antara 1 hingga 10</string>
    <string name="rating_stres_info">Peringkat subjektif dari tingkat stres yang dialami seseorang, berkisar antara 1 hingga 10</string>
    <string name="aktivitas_fisik_info">Jumlah jam seseorang melakukan aktivitas fisik setiap hari</string>
    <string name="tekanan_darah_info">Pengukuran tekanan darah seseorang \nElevated = 120 &lt; systolic &lt;= 129 and diastolic &lt;= 80 \nStage 1 = (130 &lt;= systolic &lt;= 139) atau (80 &lt; diastolic &lt; 89) \nStage 2 = selain yang disebutkan</string>
    <string name="detak_jantung_info">Detak jantung istirahat seseorang dalam detak per menit (BPM)</string>
    <string name="langkah_info">Jumlah langkah yang dilakukan seseorang per hari</string>
    <string name="input_ndata">Input\nData</string>
    <string name="langkah_harian">Langkah Harian</string>
    <string name="alert_nama">Nama harus diisi!</string>
    <string name="alert_email">Email harus diisi!</string>
    <string name="alert_password">Password harus diisi!</string>
    <string name="alert_gender">Jenis Kelamin harus diisi!</string>
    <string name="selamat">Selamat!</string>
    <string name="registrasi_berhasil">Registrasi berhasil. Lanjut untuk masuk?</string>
    <string name="ya">Ya</string>
    <string name="alert_email_login">Kolom Email harus diisi!!</string>
    <string name="alert_password_login">Kolom Password harus diisi!!</string>
    <string name="okey">Okey</string>
    <string name="sesi_berakhir">sesi login anda telah berakhir</string>
    <string name="reset_password">Reset Password</string>
    <string name="sub_title">Masukkan email untuk lakukan reset password</string>
    <string name="kirim">Kirim</string>
    <string name="lupa_password_klik">Lupa password klik</string>
    <string name="alert_email_pattern">email anda tidak sesuai</string>
    <string name="update_npassword">Update \nPassword</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="update_password">UPDATE PASSWORD</string>
    <string name="update">UPDATE</string>
    <string name="cek_pwd_gagal">Mohon cek kembali password dan konfirmasi password</string>
    <string name="email_terdaftar">Pastikan email anda sudah terdaftar</string>
    <string name="setelan">Setelan</string>
    <string name="ubah_informasi_akun">Ubah Informasi Akun</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="kalkulator_njam_tidur">Kalkulator \nJam Tidur</string>
    <string name="_00_00">00:00</string>
    <string name="kalkulasi">KALKULASI</string>
    <string name="peringatan">Mohon data jangan ada yang kosong</string>
    <string name="peringatan_nama">mohon kolom nama diisi</string>
    <string name="peringatan_tanggal">mohon tanggal diisi</string>
    <string name="peringatan_gender">mohon pilih gender</string>
    <string name="petunjuk">Petunjuk</string>
    <string name="jika_data_tidak_diisi_akan_diisikan_dengan_data_lama">Jika data tidak diisi akan diisikan dengan data lama</string>
    <string name="data_null">Anda belum \nmelakukan diagnosa</string>
    <string name="error_input">Data Harus Diisi</string>

    <string-array name="gender">
        <item>Laki Laki</item>
        <item>perempuan</item>
    </string-array>

    <string-array name="bloodpressure">
        <item>stage 1</item>
        <item>stage 2</item>
        <item>elevated</item>
    </string-array>
</resources>