<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    tools:context=".ui.input.InputActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Input\nData"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <TextView
                android:text="@string/tinggi"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_tinggi_input"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:background="@drawable/isian"
                    android:layout_width="120dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="55dp"/>

                <TextView
                    android:layout_marginLeft="20dp"
                    android:text="@string/cm"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <TextView
                android:text="@string/berat_badan"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_bb_input"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:background="@drawable/isian"
                    android:layout_width="120dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="55dp"/>

                <TextView
                    android:layout_marginLeft="20dp"
                    android:text="@string/kg"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <TextView
                android:text="@string/durasi_tidur"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_tidur_input"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:background="@drawable/isian"
                    android:layout_width="120dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="55dp"/>

                <TextView
                    android:layout_marginLeft="20dp"
                    android:text="@string/jam_hari"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <TextView
                android:text="@string/rating_tidur"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderratingtidur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:value="1.0"
                android:stepSize="1.0"
                android:valueFrom="0.0"
                android:valueTo="10.0"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:text="@string/rating_stres"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderratingstres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:value="1.0"
                android:stepSize="1.0"
                android:valueFrom="0.0"
                android:valueTo="10.0"
                android:layout_marginBottom="20dp"/>


            <TextView
                android:text="@string/rating_aktivitas_fisik"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_fisik_input"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:background="@drawable/isian"
                    android:layout_width="120dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="55dp"/>

                <TextView
                    android:layout_marginLeft="20dp"
                    android:text="@string/jam_hari"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <TextView
                android:text="@string/tekanan_darah"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

           <Spinner
               android:background="@drawable/isian"
               android:id="@+id/spinnerbpinput"
               android:entries="@array/bloodpressure"
               android:layout_width="match_parent"
               android:layout_height="55dp"
               android:layout_marginBottom="20dp"/>


            <TextView
                android:text="@string/detak_jantung"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_langkah_input"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:background="@drawable/isian"
                    android:layout_width="120dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="55dp"/>

                <TextView
                    android:layout_marginLeft="20dp"
                    android:text="@string/bpm"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <TextView
                android:text="langkah Harian"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_jantung_input"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:background="@drawable/isian"
                    android:layout_width="120dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="55dp"/>

                <TextView
                    android:layout_marginLeft="20dp"
                    android:text="@string/langkah_per_hari"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Button
                style="@style/Button"
                android:text="@string/input"
                android:id="@+id/btn_input"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="40dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>