<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_3"
    tools:context=".ui.welcome.WelcomeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_logo_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp"
        android:layout_marginTop="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_logo_app"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/cv_logo_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:layout_marginTop="120dp"
        android:text="@string/register"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/line_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintStart_toEndOf="@id/line_start"
        app:layout_constraintEnd_toStartOf="@id/line_end"/>

    <ImageView
        android:id="@+id/line_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        style="@style/ButtonSecondary"
        android:layout_marginTop="80dp"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>